<?xml version="1.0" encoding="utf-8"?>
<resources>
    //Strings der App
    <string name="app_name">Tabletapp</string>
 // appname
    <string name="action_settings">Settings</string>
    <string name="title_activity_table_wizard">TableWizard</string>
 // Titel der Wizard oberfläche
             <string name="Zeilen">column</string>
 // title    <string name="Spalten">row</string>
 // title    <string name="Table_Wizard">Table Wizard</string>
 // title    <string name="on_click">on_click</string>

 //on_click handler event name für buttons
              <string name="exit">Exit</string>
 // button    <string name="back">Back</string>
 // button    <string name="create">Create</string>
 // button    <string name="finished">Finish</string>
 // button    <string name="hans">Import</string>
 // button    <string name="server">Server:</string>
 // title     <string name="email">E-Mail:</string>
 // title     <string name="password">Password:</string>
 // title     <string name="login">Login!</string>
 // button    <string name="title">Title:</string>
 // title     <string name="database">Databasename</string>
<string name="content">Content:</string>
    <string name="entry_date">Entry_Date:</string>
 // hier muss der datenbank name eingetragen werden.
    <string name="last_entries">Last Entries</string>
  <string name="popup">You must fill in all fields, as otherwise we cannot process your login</string>
  // Ereigniss text für popup 1 das bei leeren feldern des logins auslöst
    // button   <string name="ok">OK</string>
<string name="experiment_name">Experiment name:</string>
    <string name="experiment_description">Experiment Description:</string>
    <string name="project_name">Project name:</string>
    <string name="project_description">Project Description:</string>
   <string name="sync_status">Sync Status:</string>
    <string name="popup2">Please fill in a valid E-mail address</string>
    <string name="popup4">Entry name must be unique!</string>
 // Ereigniss text für popup 2 das bei inkorekter email eingabe auslöst
    <string name="LocalService">LocalService</string>
    <string name="local_service_stopped">local_service_stopped</string>
    <string name="local_service_started">local_service_started</string>
    <string name="local_service_connected">local_service_connected</string>
    <string name="local_service_disconnected">local_service_disconnected</string>
    <string name="keyboard">Keyboard</string>
    <string name="service_name">LocalService</string>
    <string name="active_projects">Active Projects</string>
    <string name="keaboard_entry">Keyboard Entry</string>
    <string name="experiment">Experiments</string>
    <string name="title_activity_Experiment_show">Experimente</string>
    <string name="new_entry">New Entry</string>
    <string name="popup3">Please enter a Title.</string>
    //Farben der App
    <color name="table_background">#999999</color>
    <color name="white">#FFFFFF</color>
    <color name="row_background">#ffffff</color>
    <color name="text_black">#000000</color>
<string name="new_table">New Table</string>
    <string name="title_activity_project_show">project_show</string>
    <string name="columns">Columns:</string>
    <string name="row">Row:</string>
    <string name="table_entry">Table_entry</string>
</resources>
