<?xml version="1.0" encoding="utf-8"?>




<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication3.MainActivity2">

       <TextView
           android:text="Table-Wizard"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_centerHorizontal="true"
           android:id="@+id/textView2" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Zeilen"
           android:id="@+id/textView"
           android:layout_below="@+id/textView2"
           android:layout_toLeftOf="@+id/textView2"
           android:layout_marginTop="32dp" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Spalten"
           android:id="@+id/textView3"
           android:layout_alignTop="@+id/textView"
           android:layout_toRightOf="@+id/textView2" />

       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:inputType="numberDecimal"
           android:ems="10"
           android:id="@+id/editText"
           android:layout_below="@+id/textView"
           android:layout_toLeftOf="@+id/textView2"
           android:layout_alignLeft="@+id/textView"
           android:layout_alignStart="@+id/textView" />

       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:inputType="numberDecimal"
           android:ems="10"
           android:id="@+id/editText2"
           android:layout_below="@+id/textView3"
           android:layout_alignLeft="@+id/textView3"
           android:layout_alignStart="@+id/textView3"
           android:layout_alignRight="@+id/textView3"
           android:layout_alignEnd="@+id/textView3"
           android:layout_alignBottom="@+id/editText" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/create"
           android:id="@+id/button"
           android:layout_marginTop="30dp"
           android:layout_below="@+id/editText2"
           android:layout_alignLeft="@+id/button2"
           android:layout_alignStart="@+id/button2"
           android:onClick="buttonEventHandler" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/hans"
           android:id="@+id/button2"
           android:layout_below="@+id/button"
           android:layout_centerHorizontal="true"
           android:onClick="buttonEventHandler" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/back"
           android:id="@+id/button3"
           android:layout_alignParentBottom="true"
           android:layout_toLeftOf="@+id/textView2"
           android:layout_marginBottom="82dp"
           android:onClick="buttonEventHandler" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/exit"
           android:id="@+id/button4"
           android:layout_alignTop="@+id/button3"
           android:layout_toRightOf="@+id/textView2"
           android:onClick="buttonEventHandler" />

</RelativeLayout>

